fix: dont wrap columns #20 was causing a row mismatch

--- a/src/index.css
+++ b/src/index.css
@@ -287,7 +287,7 @@ html,
 
 .cell:hover {
   /* to get around an inline style */
-  z-index: 250 !important;
+  z-index: 50 !important;
 }
 
 .cell:hover .cell__long-value {
